Catch errors and improve logging